--- a/Explore/Default/.jlsdi_reg_mapping.DTEMPLATE.json
+++ b/Explore/Default/.jlsdi_reg_mapping.DTEMPLATE.json
@@ -16,7 +16,7 @@
         "value" : "@1"
       } ],
       "additionalInfo" : {
-        "description" : "",
+        "description" : "Hi ",
         "contentType" : "JSON",
         "documentState" : "VALID"
       }
